# person-profile-widget

./: README.md  app.py  pyproject.toml  requirements.txt  vercel.json
media/imgs/logo/: Amazon.eps  Crunchbase.eps  G+.eps  LinkedIn.eps  whitepages.eps
templates/: _recaptcha.html  airtable_company_profile.json  airtable_customers.json  airtable_employees.json  index.html  linkedin_xray_tool.html.jinja  new.html
