[tool.poetry]
name = "person-widget"
version = "0.1.0"
description = ""
authors = ["Zeha Irawan <zeha@nubela.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-cors = "^5.0.0"
requests = "^2.32.3"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
